src/css/chat-room.module.css
a {
  color: #0084eb;
  cursor: pointer;
  padding: 0.25em 0.5em;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

ul {
  padding-left: 5px;
}

[type="text"],
[type="password"],
[type="email"],
[type="number"] {
  padding: 5px;
}

[type="color"] {
  cursor: pointer;
}

label [type="file"] {
  display: none;
}

.chat-app svg.outlined {
  border: 1px solid;
}

.bold {
  font-weight: bold;
}

.hidden {
  display: none;
}

.slider {
  -webkit-appearance: none;
  width: 100%;
  height: 30px;
  background: #d3d3d3;
  outline: none;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  margin-top: 35px;

  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;

  border-bottom: 5px solid black;
}

.slider::-moz-range-thumb {
  cursor: pointer;
  margin-top: 35px;

  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;

  border-bottom: 5px solid black;
}

.chat-app {
  height: 100%;
  max-width: 728px;
  margin: 0 auto;
  background-color: black;
  font-family: sans-serif;
  padding: 5px;

  position: relative;

  color: rgb(255, 121, 0);
}

.chat-app header {
  /* min-height: 20px;
  color: white; */
}

.chat-app {
  display: flex;
  justify-content: center;
}

.chat-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  width: 100%;
}

.messages-section {
  overflow-y: scroll;
  display: flex;
  flex-direction: column-reverse;
  flex-grow: 1;
  color: initial;
  margin-bottom: 0.3em;
  width: 100%;
}

.messages-section > :first-child {
  margin-top: auto;
}

[data-format="*"] {
  font-style: italic;
}

[data-format="**"] {
  font-weight: bold;
}

[data-format="_"] {
  text-decoration: underline;
}

.menu {
  position: absolute;
  right: 0;
  background: white;
  border: 1px solid rgb(222, 222, 222);
  bottom: 1.3em;
  white-space: nowrap;
}

.menu > * {
  color: #0084eb;
  cursor: pointer;
  padding: 0.25em 0.5em;
}

.menu > *:last-child {
  margin-bottom: 0;
}

.menu > *:hover {
  text-decoration: underline;
}

.button {
  display: inline-block;
  text-align: center;
  padding: 0.38em;
  white-space: nowrap;
  background-color: #ccc;
  border-radius: 0.25em;
  cursor: pointer;
}

.pointer {
  cursor: pointer;
}

.chat-controls {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.chat-controls * {
  vertical-align: middle;
}

svg.gavel-icon {
  font-size: 1.1em;
}

.user-count {
  margin: 0px 5px;
  margin-top: 3px;
}

.dialog {
  background: white;
  border: 1px solid rgb(222, 222, 222);
  color: black;
  padding: 5px;
  font-size: 0.85em;

  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  max-width: 350px;
}

.dialog header {
  display: flex;
  justify-content: space-between;
  font-size: 1.3em;
}

.dialog header svg {
  font-size: 1rem;
  cursor: pointer;
}

.moderators main > div {
  display: flex;
  justify-content: space-between;
}

.message-style-editor > label:not(.button) {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.message-style-editor label:not(.button) > * {
  max-width: 50%;
}

.profile-editor img,
.profile-editor svg {
  cursor: pointer;
}

::-webkit-scrollbar {
  width: 14px;
}

::-webkit-scrollbar-track {
  background: rgb(226, 226, 226);
}

::-webkit-scrollbar-thumb {
  background: rgb(255, 121, 0);
}

.chat-room-overlay {
  display: flex;
  position: absolute;
  align-items: center;
  justify-content: center;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.5);
}

.overlay-message {
  background: rgb(240, 240, 240);
  color: rgb(24, 23, 23);
  padding: 10px;
  border-radius: 3px;
  text-align: center;
}

.message-form {
  display: flex;
  min-height: 100px;
  font-size: 1.5rem;
  align-items: center;
  width: 100%;
  z-index: 0;
}

.message-form > *,
.message-form svg {
  height: 100% !important;
}

.message-form button {
  width: 20%;
  background-color: rgb(56, 56, 143);
}

.message-form svg {
  /* NOTE: Placeholder */
  border: 1px solid black;
  background: black;
}

.camera-icon {
  margin-right: 2px;
}

.format-controls {
  font-size: 0.8em;
  display: flex;
  height: 1.5em;
  align-items: center;
  justify-content: flex-end;
  margin-bottom: 0.3em;
}

.format-controls svg {
  font-size: 1.2em;
}

.format-controls > *:not(.menu) {
  cursor: pointer;
  padding-left: 5px;
  padding-right: 5px;
  text-align: center;
  display: flex;
  position: relative;
}

.format-controls * {
  vertical-align: middle;
}

.format-controls .down-arrow {
  margin-left: -1px;
  margin-right: -7px;
}

.format-controls > em {
  font-family: "Times New Roman", Times, serif;
  font-size: 0.9em;
}

.font-color > :nth-child(2) {
  color: rgb(255, 121, 0);
}

.font-color > :nth-child(1) {
  fill-opacity: 1;
}

.input-wrapper {
  position: relative;
  width: 100%;
}

textarea {
  width: 100%;
  height: 100%;
  font-size: 1rem;
  background: none;
  outline: none;
  border: none;
  padding: 10px 15px;
  font-family: sans-serif;
  resize: none;
  background-size: contain;
}

button {
  /* background-color: #282c34;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  font-size: 1.25rem; */

  display: inline-block;
  text-align: center;
  padding: 0.38em;
  white-space: nowrap;
  background-color: #ccc;
  border-radius: 0.25em;
  cursor: pointer;
  border: 0;
}

button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.login-form button {
  color: #282c34;
}

.login-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  max-width: 300px;
  text-align: center;
}

.login-form > * {
  margin-bottom: 5px;
}

ul,
li {
  text-align: left;
  list-style: none;
}

.message {
  border-left: 5px solid rgba(0, 0, 0, 0);
  position: relative;
  display: flex;
  align-items: center;
  background: white;
  border-top: 1px solid;
  font-size: 0.9rem;
  padding: 0 5px;
  padding-left: 0px;
  background-size: contain;
  z-index: 0;
}

/* NOTE: Specifity required */
.chat-app .message-background-image {
  position: absolute;
  background-size: contain;
  width: 100%;
  height: 100%;
  left: 0px;
  margin: 0px;
  padding: 0px;
  z-index: -1;
}

.sample-message-wrapper .message {
  border-bottom: 1px solid;
}

.sample-message-wrapper {
  background: black;
}

.message-username {
  font-weight: bold;
}

.message-contents {
  margin-left: 5px;
  width: 100%;
}

.message > div {
  margin-left: 5px;
  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
}

.message p {
  white-space: pre-wrap;
  margin: 0px;
}

.message img {
  max-width: 100%;
  max-height: 120px;
}

.message.mention {
  border-left: 5px solid rgb(255, 204, 0);
}

.message-details {
  position: absolute;
  display: flex;
  align-items: flex-end;
  top: 0px;
  right: 0px;
  font-size: 0.75rem;
  padding: inherit;
}
.message-details svg {
  width: 75%;
  height: 75%;
}

.message-timestamp {
  /* width: 100%; */
}

.message-details > * {
  vertical-align: middle;
}

.message button {
  width: 15px;
  height: 15px;
  padding: 0;
  font-size: 10px;
  background: none;
  color: black;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.message button:hover {
  background: red;
  color: white;
}

.sent {
  /* flex-direction: row-reverse; */
}

.sent p {
  /* align-self: flex-end; */
}

.received p {
}

/* NOTE: Specificity required for priority */
.chat-app .avatar {
  height: 40px;
  width: 40px;
}

